cmake_minimum_required(VERSION 3.16)
project(animals)

set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DENABLE_LOGGER")
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -DENABLE_LOGGER -DDISABLE_LOGGER_TO_CONSOLE -DLOGGER_DBG_VIEW")
set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS_RELWITHDEBINFO} -DENABLE_LOGGER -DDISABLE_LOGGER_TO_CONSOLE -DLOGGER_DBG_VIEW")
set(CMAKE_CXX_FLAGS_MINSIZEREL "${CMAKE_CXX_FLAGS_MINSIZEREL} -DENABLE_LOGGER -DDISABLE_LOGGER_TO_CONSOLE -DLOGGER_DBG_VIEW")

add_library(animals STATIC)

target_sources(animals
	PRIVATE
	${CMAKE_CURRENT_SOURCE_DIR}/include/animals/animals.hpp
	${CMAKE_CURRENT_SOURCE_DIR}/include/animals/default_cert.hpp
	${CMAKE_CURRENT_SOURCE_DIR}/include/animals/http_last_modified.hpp
)

target_include_directories(animals
	PUBLIC
	${UTILS_INCLUDE_DIRS}
	${SOCKS_INCLUDE_DIRS}
	${CMAKE_CURRENT_SOURCE_DIR}/include/
)

target_link_libraries(animals
	Boost::asio
	Boost::beast
	fmt
	${OPENSSL_LIBRARIES}
)

set(ANIMALS_INCLUDE_DIRS
	${CMAKE_CURRENT_SOURCE_DIR}/include
	PARENT_SCOPE
)

set(ANIMALS_LIBRARIES
	animals
	PARENT_SCOPE
)
