cmake_minimum_required(VERSION 3.16)
project(animals)

set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DENABLE_LOGGER")
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -DENABLE_LOGGER -DDISABLE_LOGGER_TO_CONSOLE -DLOGGER_DBG_VIEW")
set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS_RELWITHDEBINFO} -DENABLE_LOGGER -DDISABLE_LOGGER_TO_CONSOLE -DLOGGER_DBG_VIEW")
set(CMAKE_CXX_FLAGS_MINSIZEREL "${CMAKE_CXX_FLAGS_MINSIZEREL} -DENABLE_LOGGER -DDISABLE_LOGGER_TO_CONSOLE -DLOGGER_DBG_VIEW")

add_library(animals STATIC)

target_sources(animals
	PRIVATE
	${CMAKE_CURRENT_SOURCE_DIR}/include/animals/animals.hpp
	${CMAKE_CURRENT_SOURCE_DIR}/include/animals/goat.hpp
	${CMAKE_CURRENT_SOURCE_DIR}/include/animals/uncia.hpp
	${CMAKE_CURRENT_SOURCE_DIR}/include/animals/http_last_modified.hpp

	${CMAKE_CURRENT_SOURCE_DIR}/src/dummy.cpp
)

target_include_directories(animals
	PUBLIC
	${UTILS_INCLUDE_DIRS}
	${SOCKS_INCLUDE_DIRS}
	${CMAKE_CURRENT_SOURCE_DIR}/include/
)

target_link_libraries(animals
	Boost::asio
	Boost::beast
	fmt
	${OPENSSL_LIBRARIES}
)

if (MSVC AND CMAKE_CXX_COMPILER_VERSION VERSION_GREATER_EQUAL 19.29.30129 AND CMAKE_VERSION VERSION_GREATER 3.20.3)
	set_property(TARGET animals PROPERTY CXX_STANDARD 23)
	message(STATUS "animals set cxx standard: C++23")
else()
	set_property(TARGET animals PROPERTY CXX_STANDARD 20)
	message(STATUS "animals set cxx standard: C++20")
endif()

set(ANIMALS_INCLUDE_DIRS
	${CMAKE_CURRENT_SOURCE_DIR}/include
	PARENT_SCOPE
)

set(ANIMALS_LIBRARIES
	animals
	PARENT_SCOPE
)
